--- a/dummy-asp-mvc/Web.config
+++ b/dummy-asp-mvc/Web.config
@@ -9,7 +9,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="MongoConnString" value="mongodb+srv://usrDummies:1usrDummies@dummies-cluster-x9n8u.gcp.mongodb.net/test?retryWrites=true" />
+    <add key="MongoConnString" value="your-conn-string" />
     <add key="MongoDatabaseName" value="sample_dummies" />
   </appSettings>
   <!--
